# wav

./: LICENSE  README.md  meson.build
contrib/: frequency-spectrum.c  frequency-spectrum.py
include/: audio.h  buffer.h  config.h  event-loop.h  output.h  render.h  wav.h  wayland.h
src/: audio.c  buffer.c  config.c  event-loop.c  main.c  output.c  render.c  wayland.c
